# arrived-investment-agent

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  arrived-agent-spec.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/app/: __init__.py  config.py  dependencies.py  main.py
backend/src/app/api/: __init__.py  routes_admin.py  routes_chat.py  routes_meta.py  routes_offerings.py  routes_plan.py  routes_plans.py  routes_region.py  sse.py
backend/src/domain/: __init__.py  allocation.py  market.py  models.py  planner.py  ports.py  risk.py
backend/src/infrastructure/: __init__.py  anthropic_client.py  seed.py
backend/src/infrastructure/arrived/: __init__.py  details.py  fetcher.py  mapper.py  refresh.py
backend/src/infrastructure/duckdb/: __init__.py  catalogue_snapshot.py  connection.py  (+3 more)
backend/src/services/: __init__.py  agent_service.py  market_service.py  plan_service.py  region_info_service.py  tools.py
backend/tests/: conftest.py
backend/tests/api/: test_admin_offerings.py  test_api.py  test_plan_validation.py  test_region_info.py
backend/tests/app/: test_config.py  test_security_boundaries.py
backend/tests/domain/: test_allocation.py  test_market.py  test_planner.py
backend/tests/infrastructure/: arrived_fixtures.py  test_arrived_details.py  test_arrived_mapper.py  test_arrived_refresh.py  test_enrichment.py  test_enrichment_coverage.py  test_offering_schema_migration.py  test_repos.py  test_seed_purge.py  test_seed_retirement.py
backend/tests/services/: test_agent_empty_text.py  test_agent_service.py  test_agent_service_limits.py  test_plan_service.py  test_region_info_service.py  test_tools.py
(+79 files in other folders)
