[project]
name = "arrived-backend"
version = "0.1.0"
description = "Arrived Investment Agent API: offerings explorer, deterministic planner, chat agent."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "duckdb>=1.1",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv]
# Virtual project: src/ packages are reached via pythonpath/mypy_path, not an install.
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# "." lets test modules import shared fixture modules as `tests.<pkg>.<module>`.
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app", "domain", "services", "infrastructure", "tests"]

[tool.ruff.lint.per-file-ignores]
# Appendix A test files are canonical and copied verbatim (spec §12).
"tests/**" = ["E701", "E702"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Canonical Appendix A tests are intentionally loosely typed; keep bodies checked.
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = true
